# aws-rag-quickstart

./: .env  .pre-commit-config.yaml  .tflint.hcl  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
src/: AWSAuth.py  AgentLambda.py  IngestionLambda.py  LLM.py  constants.py  fast_api_wrapper.py  opensearch.py
src/aws_rag_quickstart/: AgentLambda.py  IngestionLambda.py  cli.py  fast_api_wrapper.py  opensearch.py
terraform/live/dev/: main.tf  vars.tf
terraform/modules/ecr/: main.tf
terraform/modules/ecs/: main.tf  vars.tf
terraform/modules/lambda/: main.tf
terraform/modules/opensearch/: main.tf
terraform/modules/vpc/: main.tf  out.tf
tests/: LambdaE2E.py  unit_tests.py
